<resources>
    <string name="app_name">Layout</string>
    <string name="pick_a_service">Pick a service</string>
    <string name="instant_courier">instant courier</string>
    <string name="transport">Transport</string>
    <string name="go_food">Go-Food</string>
    <string name="shopping">Shopping</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="wallet">Wallet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">Order</string>
    <string name="my_wallet">My Wallet</string>
    <string name="done">Selesai</string>
    <string name="on_progress">Sedang Diproses</string>
</resources>
