<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".section.OrderFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_56dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:paddingEnd="@dimen/dimen_56dp"
        android:paddingStart="@dimen/dimen_56dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_hitam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_pick_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:text="@string/pick_a_service"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="@dimen/font_24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <LinearLayout
        android:id="@+id/ll_gosend"
        style="@style/ItemMenu"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/ll_goride"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pick_service"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/dimen_144dp"
            android:layout_height="@dimen/dimen_144dp"
            android:src="@drawable/menu_gosend"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/TextMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instant_courier" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_goride"
        style="@style/ItemMenu"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_gosend"
        app:layout_constraintTop_toBottomOf="@id/tv_pick_service"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/dimen_144dp"
            android:layout_height="@dimen/dimen_144dp"
            android:src="@drawable/menu_goride"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/TextMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transport" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gofood"
        style="@style/ItemMenu"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/ll_goride"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_gosend"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/dimen_144dp"
            android:layout_height="@dimen/dimen_144dp"
            android:src="@drawable/menu_gofood"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/TextMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_food" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gomart"
        style="@style/ItemMenu"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ll_gosend"
        app:layout_constraintTop_toBottomOf="@id/ll_goride"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/dimen_144dp"
            android:layout_height="@dimen/dimen_144dp"
            android:src="@drawable/menu_gomart"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/TextMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>